--- a/html/Lessons/Lesson3/index.html
+++ b/html/Lessons/Lesson3/index.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<! DOCTYPE>
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=git add , initial-scale=1.0">
-    <title>Document</title>
+    <title>The Optimist Creed</title>
 </head>
 <body>
+    <H1>The Optimist Creed</H1>
+<b>Promise Yourself</b> 
+
+<p>To be so strong that nothing can disturb your peace of mind.<br>
+
+To talk health, happiness and prosperity to every person you meet.<br>
+
+To make all your friends feel that there is something in them.<br>
+
+To look at the sunny side of everything and make your optimism come true.
+</p>>
+
     
 </body>
 </html>
