--- a/html/Lessons/Lesson3/index.html
+++ b/html/Lessons/Lesson3/index.html
@@ -17,6 +17,6 @@
         To look at the sunny side of everything and make your optimism come true.
     </p>
 
-    <h3>The tottal end</h3>
+    <h3>The total end</h3>
 </body>
 </html>
