--- a/html/Lessons/Lesson3/index.html
+++ b/html/Lessons/Lesson3/index.html
@@ -17,7 +17,6 @@
         To look at the sunny side of everything and make your optimism come true.
     </p>
 
-   <h2>The end end</h2>
-
+    <h3>The total end</h3>
 </body>
 </html>
