--- a/html/Lessons/lesson4/lesson4.html
+++ b/html/Lessons/lesson4/lesson4.html
@@ -60,7 +60,7 @@
     
     <h3>На JavaScript пишут для интернета и браузеров.</h3>
 
-    <p>«Нажми на меня»</p>
+    <p>«Нажми на меня!»</p>
 
     <script src="script.js"> </script>.
  </body>
