--- a/html/Progect/product1.html
+++ b/html/Progect/product1.html
@@ -2,11 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Борис Акунин "Маса"</title>
+    <meta name="Блокноты Monocle Summer Notes">
+    <title> Блокноты Monocle Summer Notes</title>
 </head>
-<body>
-    <>
+<body bgcolor="#ebebed">
+    <p align="center">
+            <b>
+                <font size="-1"color="red">Описание товара:
+                    </font>
+            </b>
+        </p>
+    <div align="center">
+    <img src="https://thumb.tildacdn.com/tild3866-3866-4739-a536-343862303065/-/cover/560x560/center/top/-/format/webp/books.jpg" 
+   width="360" height="331" alt="Блокнот" align="center">
+</div>
+<p >
+    <h1 align="center"><font color="red">
+        40 BYN
+        </font>
+        </h1>
+</p>
+  
+    <h1 align="center">
+        <font size="-1" color="#626161" align="center">  
+            <h1>Блокноты Monocle Summer Notes
+        
+        </h1>
+        <p>
+            <b>
+                <font color="red">Характеристики товара:
+                    </font>
+            </b>
+        </p>
+        <p> <h3>Набор блокнотов.
+            <br> Три вида бумаги.
+        </h3>    
+        </p>
+        <p>
+            <b>
+                <font color="red">Подробное описание товара:
+                    </font>
+            </b>
+        </p>
+        <p> <h3>Набор из трех блокнотов в красном, желтом и черном цветах.
+            <br> Три вида бумаги: для списков, линованная и белая. Цена за 1 блокнот.
+        </h3>    
+        </p>
+        </font>
+        <br>
+        <hr size="1px" color="red" width="30%" >
+        <p align="center" >
+            <font size="-1">
+            «2021 @ Все права защищены» 
+            </font>
+            </p>
 </body>
 </html>
