--- a/html/Lessons/Lesson7/Lesson8/Lesson8.html
+++ b/html/Lessons/Lesson7/Lesson8/Lesson8.html
@@ -32,7 +32,7 @@
                <p> 
                    <b>Выберите пункт:</b>
                 </p>
-                <select name="bool">
+                <select name="bool" multiple>
                      <option value="1">Суп</option>
                      <option value="2">Картошка</option>
                      <option value="3">Каша</option>
