--- a/html/Lessons/Lesson9/Lesson9.html
+++ b/html/Lessons/Lesson9/Lesson9.html
@@ -42,23 +42,28 @@
             <p>
                Владение языками:
                 <label>Русский
-                <input type="checkbox" name="rus" >
+                <input type="checkbox" name="rus" value="rus" >
             </label>
-            <label> Белорусский<input type="checkbox" name="bel">
+            <label> Белорусский<input type="checkbox" name="bel" value="bel">
             </label>
-            <label>Английский<input type="checkbox" name="ang">
+            <label>Английский<input type="checkbox" name="ang" value="ang">
             </label>
                
             </p>
             <p>
-               Фото профиля: <input type="file">
+               Фото профиля: <input type="file" accept=".png .jpg">
                 </p>
                 <p>
+                    <label></label>
                     Введите логин:<input type="text">
+                </label>
                 </p>
-                  <p>  Введите пароль:<input type="password">
+                  <p> 
+                    <label> Введите пароль:<input type="password">
+                    </label>
                   </p>
-                  <p>  Повторите пароль:<input type="password">
+                  <p> <label></label> Повторите пароль:<input type="password">
+                  </label>
                   </p>
                     </p>
         </fieldset>
