--- a/html/Lessons/Lesson9/Lesson9.html
+++ b/html/Lessons/Lesson9/Lesson9.html
@@ -55,14 +55,14 @@
                 </p>
                 <p>
                     <label></label>
-                    Введите логин:<input type="text">
+                    Введите логин:<input type="text" maxlength="50" required>
                 </label>
                 </p>
                   <p> 
-                    <label> Введите пароль:<input type="password">
+                    <label> Введите пароль:<input type="password" maxlength="30" required>
                     </label>
                   </p>
-                  <p> <label></label> Повторите пароль:<input type="password">
+                  <p> <label></label> Повторите пароль:<input type="password" maxlength="30" required>
                   </label>
                   </p>
                     </p>
@@ -72,7 +72,8 @@
         <input type="submit" value="Отправить">
         </p>
        
-
+<textarea cols="30" rows="10">
+    </textarea>
     </form>
     </div>
         
