--- a/html/Lessons/Lesson10/Lesson10-2.html
+++ b/html/Lessons/Lesson10/Lesson10-2.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <script  src="form2.js"> </script>
 </head>
 <body>
-    <form name="userform" autocomplete="off">
+    <form name="userform" align="center" autocomplete="off">
         <h2 align="center">АНКЕТА</h2>
         
         <p>
@@ -15,10 +16,110 @@
           </label>
         </p>
         <p>
-            <label>Имя
-              <input type="text" name="name">
-            </label>
+          <label>Имя
+            <input type="text" name="name">
+          </label>
         </p>
+        <p>
+          <label>Отчество
+            <input type="text" name="middle_name">
+          </label>
+        </p>
+        <p>О себе сообщаю следующие сведения
+        </p>
+        <p>Пол 
+          <label>
+            <input type="radio" name="sex" value=”1”>Мужской
+          </label>
+          <br>
+          <label>
+            <input type="radio" name="sex" value=”2”>Женский
+          </label>
+        </p>
+        <p>
+          <label>Дата рождения
+            <input type="date" name="date_of_birth">
+          </label>
+        </p>
+        <p>
+          <label>Количество полных лет
+            <input type="number" name="age" min="18" max="63">
+          </label>
+        </p>
+        <p>
+          <label>Адрес места жительства
+            <input type="text" name="address">
+          </label>
+        </p>
+        <p>
+          <label>Номер контактного телефона +375
+            <input type="tel" name="phone_number" pattern="[0-9]{2}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}" maxlength='9'>
+          </label>
+        </p>
+        <p>
+          <label>Контактный e-mail
+            <input type="email" name="email" >
+          </label>
+        </p>
+        <p> 
+          <label>Контактный e-mail
+            <input type="email" name="email" >
+          </label>
+          </p>
+        <p>Образование
+          <label>
+            <input type="radio" name="education" value=”1” > -основное общее среднее профессиональное;
+          </label>
+          <br>
+          <label>
+            <input type="radio" name="education" value=”2” > -среднее (полное) общее высшее профессиональное;
+          </label>
+          <br>
+          <label>
+            <input type="radio" name="education" value=”3” > - начальное профессиональное;
+          </label>
+          <br>
+          <label>
+            <input type="radio" name="education" value=”4” >  -иное;
+          </label>
+        </p>
+        <p>
+          <label>Профессия (специальность)
+            <input type="text" name="profession">
+          </label>
+        </p>
+        <p>
+          <label>Стаж работы по специальности
+           <select name="experience" >
+            <option value=”1” > Менее года</option>
+            <option value=”2” > 1-3 года</option>
+            <option value=”3” > 3-5 лет</option>
+            <option value=”4” > 5-15 лет</option>
+            <option value=”5” > Более 15 лет</option>
+           </select>
+          </label>
+        </p>
+        <p>
+          <label>Предыдущее место работы
+            <input type="text" name="prior_work">
+          </label>
+        </p>
+        <p>
+        <p>
+          <label>Период работы на предыдущем месте с 
+            <input type="date" name="data1"> по 
+            <input type="date" name="data2">
+          </label>
+        </p>
+        <p>
+          <label>
+            <button type="reset" >Очистить форму</button>
+          </label>
+          <label>
+            <button type="submit" onclick="checkForm()">Отправить данные</button>
+          </label>
+        </p>
+
 
     </form>
 </body>
