--- a/html/Lessons/Lesson12/lesson12-1.html
+++ b/html/Lessons/Lesson12/lesson12-1.html
@@ -6,19 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1" align="center" width="60%" >
-        <caption>
+    <table border="1" align="center" width="700px" cellpadding="10px" vertical-align="top">
+        <caption style="font-size: x-large;">
             Сильнейшие землетрясения в мире
         </caption>
 
-        <thead style="background-color:rgb(154, 56, 173)">
+        <thead style="background-color:rgb(178,161,199); vertical-align: top;">
             <th>Год</th>
-            <th>Место землетрясения</th>
+            <th style="text-align: left;">Место <br> землетрясения</th>
             <th>Последствия</th> 
         </thead>
-        <colgroup >
-        <col style="padding: 110px; text-align: center;">
-        </colgroup>
         <tr>
             <td>1905</td>
             <td>Хребет Болнай</td>
