--- a/css/Lesson2/4.html
+++ b/css/Lesson2/4.html
@@ -11,6 +11,10 @@
         {
             font-weight:bold; 
         }
+        .sp li
+        {
+            font-weight:bold; 
+        }
     
       ol li ol li
       {
@@ -31,7 +35,7 @@
                 <li>Флэш-память</li>
                 <li>Оперативная память</li>
                 <li>Диск
-                    <ul style="font-weight:bold;">
+                    <ul class="sp">
                         <li>CD</li>
                         <li>DVD</li>
                     </ul>
