--- a/css/Lesson3/4.html
+++ b/css/Lesson3/4.html
@@ -17,12 +17,69 @@
       font-weight: bold;
 
         }
-        td:nth-of-type(n*n){
+        table tr:nth-child(2) td:nth-child(2) {
             background-color: #5b09f7;
       color:white;
       font-weight: bold;
 
         }
+        table tr:nth-child(3) td:nth-child(3) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+        table tr:nth-child(4) td:nth-child(4) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+        table tr:nth-child(5) td:nth-child(5) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+        table tr:nth-child(6) td:nth-child(6) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+        table tr:nth-child(7) td:nth-child(7) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+        table tr:nth-child(8) td:nth-child(8) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+        table tr:nth-child(9) td:nth-child(9) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+        table tr:nth-child(10) td:nth-child(10) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+        table tr:nth-child(11) td:nth-child(11) {
+            background-color: #5b09f7;
+      color:white;
+      font-weight: bold;
+
+        }
+
+
+
         td {
             border: 1px solid black;
             width: 40px;
