--- a/css/Lesson3/3.html
+++ b/css/Lesson3/3.html
@@ -20,11 +20,11 @@
     font-weight:bold;
 }
 
-tr:nth-child(odd)
+td:nth-child(1)
 {
     background-color:#ccc;
 }
-tr:first-child, tr:nth-child(5)
+tr:first-child
         {
    background-color:#7e4ff7;
     color:white;
